Change styles to make the app responsive

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
                         Product for You
                     </h1>
                     <p class="description">
-                        Design is the creation of a plan or convention for the<br>
-                        construction of an object or a system as in architectural<br> blueprints, 
+                        Design is the creation of a plan or convention for the
+                        construction of an object or a system as in architectural blueprints, 
                         engineering drawings, business processes.
                     </p>
                     <a href="#services" class="button" data-aos="zoom-out-up" data-aos-duration="2000">Get started</a>
@@ -89,28 +89,28 @@
             <h4 class="subtitle subtitle__services">Our Services</h4>
             <h2 class="title title_center">Why People Choose Us</h2>
             <div class="services__cards">
-                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="800">
                     <img src="img/benefits/design.png" alt="design" class="services__cards-img">
                     <h3 class="title title__cards">Design</h3>
                     <p class="description description__cards">
                         a plan or drawing produced to show the look and function
                     </p>
                 </div>
-                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="800">
                     <img src="img/benefits/development.png" alt="development" class="services__cards-img">
                     <h3 class="title title__cards">Development</h3>
                     <p class="description description__cards">
                         Development is defined as the process of growth
                     </p>
                 </div>
-                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="800">
                     <img src="img/benefits/branding.png" alt="branding" class="services__cards-img">
                     <h3 class="title title__cards">Branding</h3>
                     <p class="description description__cards">
                         The marketing practice of creating a name, symbols
                     </p>
                 </div>
-                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="services__cards-item" data-aos="fade-up" data-aos-duration="800">
                     <img src="img/benefits/illustration.png" alt="illustration" class="services__cards-img">
                     <h3 class="title title__cards">Illustration</h3>
                     <p class="description description__cards">
@@ -135,9 +135,9 @@
                         Your Creative Ideas
                     </h2>
                     <p class="description description__illustration">
-                        A creative concept is an overarching “Big Idea” that<br> captures audience interest, 
-                        influences their emotional<br> response and inspires them to take action.
-                        It is a unifying<br> theme that can be used across all campaign messages 
+                        A creative concept is an overarching “Big Idea” that captures audience interest, 
+                        influences their emotional response and inspires them to take action.
+                        It is a unifying theme that can be used across all campaign messages 
                     </p>
                     <button class="button" id="btn" data-aos="flip-up" data-aos-duration="1500">Learn more</button>
                 </div>
@@ -159,8 +159,8 @@
                         Lies On Teamwork
                     </h2>
                     <p class="description description__illustration">
-                        Good teamwork means a synergistic way of working with<br> each person committed and working towards 
-                        a shared<br> goal. ... It is therefore a necessity that leaders facilitate<br> and build the teamwork 
+                        Good teamwork means a synergistic way of working with each person committed and working towards 
+                        a shared goal. ... It is therefore a necessity that leaders facilitate and build the teamwork 
                         skills of their people if they are 
                     </p>
                     <button class="button" id="btn" data-aos="zoom-out-up">Learn more</button>
